# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  run_all_tests.py  test_ai_generator.py  test_api_endpoints.py  test_rag_system.py  test_search_tools.py  test_system_health.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: check-format.sh  format.sh  quality-check.sh
